plugins {
    id 'java'
    id 'application'

    id("org.javamodularity.moduleplugin") version "1.8.15"
    id("org.openjfx.javafxplugin") version "0.1.0"
    id("org.beryx.jlink") version "2.25.0"
}

group = 'usta.hurstcontrol'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'usta.hurstcontrol.Main'
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    // TEST
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // HIBERNATE + JPA
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // MySQL (XAMPP)
    implementation 'mysql:mysql-connector-java:8.0.33'

    // BCrypt para contraseñas
    implementation 'org.mindrot:jbcrypt:0.4'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
}

tasks.named('run') {
    modularity.inferModulePath = false
}

jlink {
    imageZip = project.layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher { name = 'app' }
}
